<resources>
    <string name="app_name">Projeto fire base</string>
    <string name="logo_tela_de_login">Logo tela de login</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="clique_aqui_para_se_cadastrar">Clique aqui para se cadastrar!</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="senha_cadastro">Senha</string>
    <string name="email_cadastro">Email</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sergio_n4todev_gmail_com">sergio.n4todev@gmail.com</string>
    <string name="name_usuario">Sérgio Rodrigues</string>
    <string name="email_user">Sergio.n4todev@gmail.com</string>
    <string name="desconectar_user">desconectar</string>
    <string name="button_desconect_user">Desconectar</string>
</resources>