<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/Tela_form_Cadastro">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_background"
    tools:context=".FormCadastro">

    <TextView
        android:id="@+id/title_cadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/container_tela2"
        style="@style/ContainerComponents"
        app:layout_constraintTop_toBottomOf="@+id/title_cadastrese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_nome_cadastro"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@+id/container_tela2"
        app:layout_constraintEnd_toEndOf="@id/container_tela2"
        app:layout_constraintStart_toStartOf="@id/container_tela2" />

    <EditText
        android:id="@+id/edit_cadastro_email"
        style="@style/Edit_Text"
        android:hint="@string/email_cadastro"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textWebEmailAddress"
        android:drawableEnd="@drawable/ic_email_24"
        app:layout_constraintEnd_toEndOf="@id/edit_nome_cadastro"
        app:layout_constraintStart_toStartOf="@id/edit_nome_cadastro"
        app:layout_constraintTop_toBottomOf="@id/edit_nome_cadastro"/>

    <EditText
        android:id="@+id/edit_cadastro_senha"
        style="@style/Edit_Text"
        android:hint="@string/senha_cadastro"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_eye_24"
        app:layout_constraintEnd_toEndOf="@id/edit_nome_cadastro"
        app:layout_constraintStart_toStartOf="@id/edit_nome_cadastro"
        app:layout_constraintTop_toBottomOf="@id/edit_cadastro_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cadastro"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/cadastrar"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/container_tela2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"



        />






</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
