<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/tela_login">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logoappmotoboy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_tela_de_login"/>


    <View
        android:id="@+id/containerview"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email_24"
        app:layout_constraintStart_toStartOf="@+id/containerview"
        app:layout_constraintEnd_toEndOf="@+id/containerview"
        app:layout_constraintTop_toTopOf="@+id/containerview"
        android:autofillHints="textEmailAddress" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:textColor="@color/black"
        android:hint="@string/senha"
        android:textColorHint="@color/black"
        android:inputType="numberPassword"
        android:drawableEnd="@drawable/ic_eye_24"
        app:layout_constraintStart_toStartOf="@+id/containerview"
        app:layout_constraintEnd_toEndOf="@+id/containerview"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        android:autofillHints="Password" />
    
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/containerview"
        app:layout_constraintEnd_toEndOf="@+id/containerview"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha" />
    
    
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerview"
        />

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/clique_aqui_para_se_cadastrar"
        app:layout_constraintTop_toBottomOf="@+id/progressbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>



