<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPrin"
    android:background="@color/yellow_background"
    android:id="@+id/Tela_cadastro">

    <View
        android:id="@+id/containerUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/container_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

<ImageView
    android:id="@+id/ic_icon_user"
    android:layout_width="115dp"
    android:layout_height="90dp"
    android:src="@drawable/ic_user_24"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="55dp"/>

    <ImageView
        android:id="@+id/iconeUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_user_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerUser" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/name_usuario"
        android:textSize="20sp"
        android:maxLines="1"
        android:maxLength="25"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/ic_icon_user"
        app:layout_constraintStart_toStartOf="@+id/iconeUser" />

    <ImageView
        android:id="@+id/email_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_email_24"
        app:layout_constraintTop_toBottomOf="@+id/iconeUser"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/iconeUser"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="12dp"
        android:text="@string/email_user"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/email_user"
        app:layout_constraintTop_toBottomOf="@+id/name_user" />

    <Button
        android:id="@+id/button_desconect"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        android:text="@string/button_desconect_user"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="@id/iconeUser"
        app:layout_constraintTop_toBottomOf="@id/email_user" />


</androidx.constraintlayout.widget.ConstraintLayout>